--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.0.3"
+    "astro": "3.0.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.8"
