--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "3.0.3"
+    "@astrojs/tailwind": "^5.0.0",
+    "astro": "^3.0.3",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.8"
+    "@tailwindcss/typography": "^0.5.8",
+    "daisyui": "^3.7.3"
   }
 }
