--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.0.3",
+    "astro-icon": "^1.0.2",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
