update actions def by adding closed event type

--- a/.github/workflows/delete_issue_wf.yml
+++ b/.github/workflows/delete_issue_wf.yml
@@ -1,7 +1,7 @@
 name: issue_deleted
 on: 
     issues: 
-        types: [deleted]
+        types: [deleted,closed]
 permissions:
     contents: write
 jobs:
